AC_PREREQ(2.54)

AC_INIT( swfmill, 0.3.0 )
AM_INIT_AUTOMAKE( AC_PACKAGE_NAME, AC_PACKAGE_VERSION )


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# cross-compile specifics
AM_CONDITIONAL(IS_WINDOWS, [ echo $host_os | grep mingw > /dev/null ])
AM_CONDITIONAL(IS_OSX, [ echo $host_os | grep darwin > /dev/null ])

AM_PROG_CC_C_O

# Checks for libraries.
PKG_CHECK_MODULES(XML, libxml-2.0)
AC_SUBST(XML_CFLAGS)
AC_SUBST(XML_LIBS)

PKG_CHECK_MODULES(XSLT, libxslt)
AC_SUBST(XSLT_CFLAGS)
AC_SUBST(XSLT_LIBS)

PKG_CHECK_MODULES(EXSLT, libexslt)
AC_SUBST(EXSLT_CFLAGS)
AC_SUBST(EXSLT_LIBS)

PKG_CHECK_MODULES(FREETYPE, freetype2)
AC_SUBST(FREETYPE_CFLAGS)
AC_SUBST(FREETYPE_LIBS)

PKG_CHECK_MODULES(PNG, libpng)
AC_SUBST(PNG_CFLAGS)
AC_SUBST(PNG_LIBS)

AC_OUTPUT([
	Makefile
	src/Makefile
	test/Makefile
	test/xml/Makefile
	])
