TESTS = test.sh


EXTRA_DIST = \
	test.sh \
	test.swfml \
	src/Main.as \
	src/org/swfmill/Foo.as \
	library/star.swf \
	library/testgradient.png \
	library/testjpg.jpg \
	library/testpng.png \
	library/testpng8.png \
	library/testpng24.png \
	library/testpng-alpha.png \
	library/vera.ttf \
	$(NULL)

CLEANFILES = \
	test.html \
	build/output.swf \
	build/classes.swf \
	build/test.swfml \
	build/library/star.swf \
	build/library/testgradient.png \
	build/library/testjpg.jpg \
	build/library/testpng.png \
	build/library/testpng8.png \
	build/library/testpng24.png \
	build/library/testpng-alpha.png \
	build/library/vera.ttf \
	$(NULL)
